--- a/givemesomecredit.html
+++ b/givemesomecredit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Ureeka Binus</title>
+		<title>GiveMeSomeCredit</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,14 +28,14 @@
 									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
 									<li><a href="https://ncthetruth.github.io/virtualnursingassistant">Virtual Nursing Assistant</a></li>
 									<li><a href="https://ncthetruth.github.io/tanakaguitar">Tanaka Guitar</a></li>
-									<li><a href="https://ncthetruth.github.io/givemesomecredit">GiveMeSomeCredit</a></li>
+									<li><a href="#">GiveMeSomeCredit</a></li>
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
 							<li><a href="#">Experience</a>
 								<ul>
 									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
-									<li><a href="#">Ureeka Binus</a></li>
+									<li><a href="https://ncthetruth.github.io/ureekabinus">Ureeka Binus</a></li>
 									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
 									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
 								</ul>
@@ -48,46 +48,40 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2 class="bld">Ureeka Binus</h2>
-							<p>Software Developers Community at Binus University</p>
+							<h2 class="bld">GiveMeSomeCredit - Kaggle</h2>
+							<p>Improve on the state of the art in credit scoring by predicting the probability that 
+								somebody will experience financial distress in the next two years.</p>
 						</header>
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/bannerureeka.jpeg" alt="Banner Ureeka Binus" /></a>
-								<div class="pmid">
-								<p>Ureeka Binus University is a community in the field of software development that
-									aims to cultivate members interested in participating in software development competitions, 
-									UI/UX design, and more. In Ureeka, members share knowledge about the latest developments in 
-									the IT world, particularly in Software Development. Ureeka also organizes training sessions 
-									on software development, covering FrontEnd, BackEnd, and UI/UX, led by professionals, seniors, 
-									and experienced faculty members.</p>
-								<ul class="actions">
-									<li><a href="https://socs.binus.ac.id/ureeka/" class="button">Learn More</a></li>
-								</ul>
-									<h3 class="bld">Activities Performed</h3>
-								<ul>
-									<li class="bld">BackEnd Training</li>
-									<p>Backend training teaches how to build the system behind an application, covering 
-										aspects such as RestAPI, API Testing, SQL and NoSQL databases, Secure Code, and more. 
-										Technologies involved may include ExpressJS, MySQL, MongoDB, and many others.</p>
-									<li class="bld">Gemastik 2023</li>
-									<ul>Gemastik is an annual competition organized by the Indonesian government in the 
-										field of Computer Science. It involves participation from various universities across 
-										Indonesia, with teams competing in different categories relevant to the competition.</ul>
-									<ul>I participated in the competition in the field of UI/UX with two other team members. 
-										We had a concept related to the 17 Sustainable Development Goals (SDGs) to develop the design of 
-										an application. Unfortunately, we lost in the preliminary round, but this experience motivates us 
-										to continue learning and enhancing our skills. We are committed to not giving up and continuously 
-										improving ourselves.</ul>
-								</ul>
-								<h3 class="bld">What do i get ?</h3>
-								<p>I gained a lot of valuable experiences while participating in Ureeka, including thinking 
-									with out-of-the-box ideas, critical thinking, presentation skills as I had to explain concepts for what 
-									I was about to create, and learning about new technologies in the IT world. Additionally, this experience 
-									has helped me deepen my knowledge in the field of software development, especially in Backend.</p>
+								<a href="#" class="image fit"><img src="images/givemesomecredit.png" alt="GiveMeSomeCredit" /></a>
+							<div class="pmid">
+								<h3>What is GiveMeSomeCredit?</h3>
+								<p>GiveMeSomeCredit is a competition on Kaggle where participants aim to improve 
+									the state of the art in credit scoring. The task involves predicting the probability 
+									that an individual will experience financial distress in the next two years. In this 
+									Kaggle competition, participants use their data science and machine learning skills 
+									to develop models that can enhance the accuracy of credit scoring systems. By predicting 
+									the likelihood of financial distress within a two-year timeframe, the goal is to contribute 
+									advancements to the field, ultimately aiding in more informed decision-making processes 
+									for lending institutions.</p>
+									<ul class="actions">
+										<li><a href="https://www.kaggle.com/competitions/GiveMeSomeCredit/overview" class="button">Learn More</a></li>
+									</ul>
+								<h3>What am I doing?</h3>
+								<p>I conducted data analysis to understand the data's structure. Following that, I processed 
+									the data by removing outliers, eliminating duplicates, and verifying if any issues persisted 
+									after processing. Subsequently, I performed modeling using RandomForest, XGBoost, and 
+									LGBM. I consolidated all these results with an Ensemble Classifier, utilizing the soft 
+									method to observe probability outcomes. Once I ensured everything was correct, I submitted 
+									the results to Kaggle and obtained a Private score of 0.86634 and a public score of 0.86009.</p>
+									<ul class="actions">
+										<li><a href="https://www.kaggle.com/code/kizuke/givemesomecredit-esemble-voting" class="button">Learn More</a></li>
+									</ul>
 								</div>
 							</section>
+
 					</div>
 				</div>
 
@@ -99,11 +93,13 @@
 						<li><a href="https://github.com/ncthetruth" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 					<ul class="copyright">
+<!-- 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 						<li>ncthetruth.github.io</li>
 					</ul>
 				</footer>
+
 		</div>
-		
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -113,5 +109,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
