--- a/himti.html
+++ b/himti.html
@@ -26,15 +26,15 @@
 										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
 									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
+									<li><a href="https://ncthetruth.github.io/virtualnursingassistant">Virtual Nursing Assistant</a></li>
+									<li><a href="https://ncthetruth.github.io/tanakaguitar">Tanaka Guitar</a></li>
+									<li><a href="https://ncthetruth.github.io/givemesomecredit">GiveMeSomeCredit</a></li>
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
 							<li><a href="#">Experience</a>
 								<ul>
-									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
+									<li><a href="#">HIMTI</a></li>
 									<li><a href="https://ncthetruth.github.io/ureekabinus">Ureeka Binus</a></li>
 									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
 									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
