--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
 									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
+									<li><a href="https://ncthetruth.github.io/virtualnursingassistant">Virtual Nursing Assistant</a></li>
+									<li><a href="https://ncthetruth.github.io/tanakaguitar">Tanaka Guitar</a></li>
+									<li><a href="https://ncthetruth.github.io/givemesomecredit">GiveMeSomeCredit</a></li>
 								</ul>
 							</li>
 							<li><a href="#one" class="scrolly">About</a></li>
