--- a/researchdatamining.html
+++ b/researchdatamining.html
@@ -26,9 +26,9 @@
 										</ul>
 									<li><a href="#">Research Data Mining</a></li>
 									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
+									<li><a href="https://ncthetruth.github.io/virtualnursingassistant">Virtual Nursing Assistant</a></li>
+									<li><a href="https://ncthetruth.github.io/tanakaguitar">Tanaka Guitar</a></li>
+									<li><a href="https://ncthetruth.github.io/givemesomecredit">GiveMeSomeCredit</a></li>
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
@@ -50,21 +50,23 @@
 						<header class="major">
 							<h2 class="bld">Comparison of Data Mining Algorithm for
 								Credit Card Fraud Detection</h2>
-							<p class="pmid">During pandemic, credit card usage has increased
-								rapidly compared to the year before. Credit cards fraud has been
-								a massive threat for their users. Through the survey and research,
-								some algorithms have been found to decrease the number of fraud
-								Leveraging machine learning and data mining techniques for
-								credit card fraud detection. This research journal aims to
-								investigate and propose the most efficient approach for developing
-								an algorithm that effectively detects credit card fraud.</p>
+							<p>Comparison of Algorithms with Ensemble Voting</p>
 						</header>
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/research.png" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/research.png" alt="researchdatamining" /></a>
 							<div class="pmid">
-								<h3>Why do we conduct research on this topic ?</h3>
+								<h3>Why are we conducting this research?</h3>
+								<p>During pandemic, credit card usage has increased
+									rapidly compared to the year before. Credit cards fraud has been
+									a massive threat for their users. Through the survey and research,
+									some algorithms have been found to decrease the number of fraud
+									Leveraging machine learning and data mining techniques for
+									credit card fraud detection. This research journal aims to
+									investigate and propose the most efficient approach for developing
+									an algorithm that effectively detects credit card fraud.</p>
+								<h3>Why do we conduct research on this topic?</h3>
 								<p>In modern society, particularly in the banking sector, credit cards 
 									have become a widely used payment tool. They offer convenience for 
 									transactions but require users to pay their outstanding balances monthly. 
@@ -77,7 +79,7 @@
 									Vector Machines (SVM), and Ensemble Methods, to classify and detect 
 									potentially fraudulent transactions, ultimately contributing to improved 
 									credit card fraud detection models.</p>
-								<h3>What do we do ?</h3>
+								<h3>What do we do?</h3>
 								<p>We combined two types of algorithms, SVM (Support Vector Machine) and Logistic 
 									Regression, SVM and Random Forest, and Random Forest and Logistic Regression. 
 									We used data from Kaggle, which contained one million rows, and split it into 
@@ -86,7 +88,7 @@
 									two different algorithms and conducted a voting process on their results. This concept is 
 									similar to Random Forest, but with the distinction that we used different algorithms, 
 									making it a heterogeneous ensemble approach.</p>
-								<h3>What were the results ?</h3>
+								<h3>What were the results?</h3>
 								<p>Based on the experiments conducted, SVM and Random Forest proved to be the most effective 
 									combination of algorithms. This combination exhibited the highest accuracy performance, 
 									with precision at 100%, recall at 99%, F-Measure at 99%, and an overall accuracy rate of 100%. 
