--- a/tanakaguitar.html
+++ b/tanakaguitar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Ureeka Binus</title>
+		<title>Tanaka Guitar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
 									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
 									<li><a href="https://ncthetruth.github.io/virtualnursingassistant">Virtual Nursing Assistant</a></li>
-									<li><a href="https://ncthetruth.github.io/tanakaguitar">Tanaka Guitar</a></li>
+									<li><a href="#">Tanaka Guitar</a></li>
 									<li><a href="https://ncthetruth.github.io/givemesomecredit">GiveMeSomeCredit</a></li>
 								</ul>
 							</li>
@@ -35,7 +35,7 @@
 							<li><a href="#">Experience</a>
 								<ul>
 									<li><a href="https://ncthetruth.github.io/himti">HIMTI</a></li>
-									<li><a href="#">Ureeka Binus</a></li>
+									<li><a href="https://ncthetruth.github.io/ureekabinus">Ureeka Binus</a></li>
 									<li><a href="https://ncthetruth.github.io/graphicdesign">Graphic Design</a></li>
 									<li><a href="https://ncthetruth.github.io/otherexperience">Other Experience</a></li>
 								</ul>
@@ -48,46 +48,57 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2 class="bld">Ureeka Binus</h2>
-							<p>Software Developers Community at Binus University</p>
+							<h2>Tanaka Guitar</h2>
+							<p>Tanaka Guitar E-commerce Project</p>
 						</header>
+						<div class="row gtr-150">
+							<div class="col-8 col-12-medium">
 
-						<!-- Content -->
-							<section id="content">
-								<a href="#" class="image fit"><img src="images/bannerureeka.jpeg" alt="Banner Ureeka Binus" /></a>
-								<div class="pmid">
-								<p>Ureeka Binus University is a community in the field of software development that
-									aims to cultivate members interested in participating in software development competitions, 
-									UI/UX design, and more. In Ureeka, members share knowledge about the latest developments in 
-									the IT world, particularly in Software Development. Ureeka also organizes training sessions 
-									on software development, covering FrontEnd, BackEnd, and UI/UX, led by professionals, seniors, 
-									and experienced faculty members.</p>
-								<ul class="actions">
-									<li><a href="https://socs.binus.ac.id/ureeka/" class="button">Learn More</a></li>
-								</ul>
-									<h3 class="bld">Activities Performed</h3>
-								<ul>
-									<li class="bld">BackEnd Training</li>
-									<p>Backend training teaches how to build the system behind an application, covering 
-										aspects such as RestAPI, API Testing, SQL and NoSQL databases, Secure Code, and more. 
-										Technologies involved may include ExpressJS, MySQL, MongoDB, and many others.</p>
-									<li class="bld">Gemastik 2023</li>
-									<ul>Gemastik is an annual competition organized by the Indonesian government in the 
-										field of Computer Science. It involves participation from various universities across 
-										Indonesia, with teams competing in different categories relevant to the competition.</ul>
-									<ul>I participated in the competition in the field of UI/UX with two other team members. 
-										We had a concept related to the 17 Sustainable Development Goals (SDGs) to develop the design of 
-										an application. Unfortunately, we lost in the preliminary round, but this experience motivates us 
-										to continue learning and enhancing our skills. We are committed to not giving up and continuously 
-										improving ourselves.</ul>
-								</ul>
-								<h3 class="bld">What do i get ?</h3>
-								<p>I gained a lot of valuable experiences while participating in Ureeka, including thinking 
-									with out-of-the-box ideas, critical thinking, presentation skills as I had to explain concepts for what 
-									I was about to create, and learning about new technologies in the IT world. Additionally, this experience 
-									has helped me deepen my knowledge in the field of software development, especially in Backend.</p>
-								</div>
-							</section>
+								<!-- Content -->
+									<section id="content">
+										<a href="#" class="image fit"><img src="images/hometanakaguitar.png" alt="" /></a>
+									<div class="pmid">
+										<h3>What is Tanaka Guitar?</h3>
+										<p>The Tanaka Guitar project is a university assignment where we are 
+											required to create an online store selling guitars. We are only allowed 
+											to use pure HTML, CSS, and JS without utilizing any frameworks. This project 
+											aims to develop our skills in web development and showcase our ability to create
+											 a functional and visually appealing e-commerce platform within the given 
+											 constraints. The focus is on implementing a seamless user experience, efficient 
+											 design, and interactive features using fundamental web technologies.</p>
+										<h3>Who is behind Tanaka Guitar?</h3>
+										<ul>
+											<li>Nicholas Christopher</li>
+											<li>David Samuel</li>
+										</ul>
+									</div>
+									</section>
+
+							</div>
+							<div class="col-4 col-12-medium">
+
+								<!-- Sidebar -->
+									<section id="sidebar">
+										<section>
+											<h3>Wireframe And Prototype</h3>
+											<p class="pmid">The Tanaka Guitar project requires the development of a 
+												user-friendly website with an emphasis on an intuitive and easy-to-navigate 
+												interface, ensuring a positive user experience. The design approach prioritizes 
+												accessibility and enjoyment for visitors to the online guitar store, promoting 
+												usability and engagement. Our goal is to enhance overall user satisfaction 
+												through thoughtful design choices and user-centric features.</p>
+											<footer>
+												<ul class="actions">
+													<li><a href="https://www.figma.com/file/FDHGA98KkJ8rmXqlEpggBS/Project_Figma?type=design&node-id=0%3A1&mode=design&t=YDsNPzz30YZH0qXM-1" class="button">Learn More</a></li>
+												</ul>
+											</footer>
+										</section>
+										<hr />
+										<h3>Code Repository (Soon)</h3>
+											<p class="pmid">We utilize pure HTML, CSS, and JavaScript without framework the Tanaka Guitar project.</p>
+									</section>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -102,8 +113,9 @@
 						<li>ncthetruth.github.io</li>
 					</ul>
 				</footer>
+
 		</div>
-		
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -113,5 +125,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
