--- a/virtualnursingassistant.html
+++ b/virtualnursingassistant.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Binus Chat Web</title>
+		<title>Virtual Nursing Assistant</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
 										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
 									<li><a href="https://ncthetruth.github.io/earlycare">Early Care</a></li>
-									<li><a href="https://ncthetruth.github.io/virtualnursingassistant">Virtual Nursing Assistant</a></li>
+									<li><a href="#">Virtual Nursing Assistant</a></li>
 									<li><a href="https://ncthetruth.github.io/tanakaguitar">Tanaka Guitar</a></li>
 									<li><a href="https://ncthetruth.github.io/givemesomecredit">GiveMeSomeCredit</a></li>
 								</ul>
@@ -48,8 +48,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2 class="bld">Binus Chat</h2>
-							<p>Web Application Chat Concept for Bina Nusantara University</p>
+							<h2 class="bld">Virtual Nursing Assistant</h2>
+							<p>Healthcare Artificial Intelligence Applications Concept</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
@@ -57,31 +57,14 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3	>Wireframe And Prototype</h3>
-											<p class="pmid">
-												The wireframe for the Binus Chat 
-												Web App is a simple representation, emphasizing the 
-												basic structure of the interface. At this stage, a 
-												simple color palette is used to keep the focus 
-												on the organization of key elements. The entire design 
-												follows the consistent theme and color scheme of Bina Nusantara, 
-												ensuring alignment with the university's identity.</p>
+											<h3>Wireframe And Prototype</h3>
+											<p class="pmid">The minimalist design concept aims to enhance user experience 
+												by focusing on simplicity, intuitive navigation, and an uncluttered interface. 
+												This approach not only promotes ease of use but also contributes to a visually 
+												clean and aesthetically pleasing user interface</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="https://www.figma.com/file/tjjU6DwoDPV9sKWF7lmEMH/Figma-Software-Engineering?type=design&node-id=0%3A1&mode=design&t=STbLaUGT7iyWB3R3-1" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/githubrepo.png" alt="" /></a>
-											<h3>Code Repository</h3>
-											<p class="pmid">This repository serves as a documentation and storage space 
-												for all Bina Nusantara Chat projects, accessible to anyone 
-												for learning purposes.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="https://github.com/ncthetruth/BinusChat/tree/master" class="button">Learn More</a></li>
+													<li><a href="https://www.figma.com/file/Dt5ed1LOSgKNazilgIa0xW/Untitled?type=design&node-id=0%3A1&mode=design&t=A2I9vD7H8qB06qFa-1" class="button">Learn More</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -92,33 +75,32 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/Login1.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/mockupvnahd.png" alt="" /></a>
 									<div class="pmid">
-										<h3>Why was Binus Chat created?</h3>
-										<p>We developed the Binus Chat web app with the aim of simplifying 
-											the process of finding contacts for fellow students, staff, or professors 
-											within the university community. This allows for faster access to contacts 
-											while preserving privacy, as users do not need to share personal contact 
-											information. They can simply search using their Binus email, student ID (NIM), 
-											professor or staff code. Additionally, it is accessible via a web browser without 
-											the need for downloading. Looking ahead, there is potential for further development, 
-											such as creating a dedicated mobile application or integrating it into the Binus Maya app.</p>
-										<h3>Technology behind Binus Chat web application</h3>
-										<p>The Technology behind Binus Chat: We use Node.js and Express.js on the server 
-											side to connect to the database. For the CSS framework, we utilize Tailwind CSS, and 
-											our choice for the database is MySQL. We selected these technologies because they are 
-											user-friendly and easily implementable.</p>
-											<h3>Who is behind Binus Chat?</h3>
-										</div>
-										<ul>
-											<li>Nicholas Christopher</li>
-											<li>David Samuel</li>
-											<li>Kristian Hadinata</li>
-											<li>Feivel Gunawan</li>
-											<li>Bob Wijaya</li>
-										</ul>
+										<h3>What is Virtual Nusing Assistant?</h3>
+										<p>
+											The Virtual Nursing Assistant is an innovative solution addressing challenges 
+											posed by disease outbreaks, particularly the recent COVID-19 pandemic. With the 
+											virus spreading through droplets and the air, affecting the respiratory system, 
+											people are hesitant to leave their homes. This increased reliance on online activities 
+											has surged the demand for healthcare services, straining doctors' schedules and hindering 
+											patient appointments. To counter this, the Virtual Nursing Assistant allows users to access 
+											information on common illnesses, receive initial treatment recommendations, schedule doctor 
+											appointments, and get medication reminders—all without physically visiting a healthcare 
+											facility. The application features a chatbot utilizing deep learning and reinforcement 
+											learning to assess symptoms, suggest possible illnesses, recommend initial treatments, 
+											and provide information on available doctors for appointments.</p>
+										<p>
+											The application employs advanced technologies, including deep learning and reinforcement 
+											learning, to enhance the reliability and effectiveness of its chatbot. This allows continuous 
+											learning, improving diagnostic accuracy and minimizing errors. Virtual Nursing Assistant aims to 
+											offer timely and dependable healthcare information, empowering users to manage their health proactively 
+											while awaiting doctor appointments. The development involved comprehensive research, resulting in 
+											a logical problem-solving approach that addresses challenges during disease outbreaks like the COVID-19 
+											pandemic. The solution enhances healthcare accessibility, enabling users to make informed 
+											decisions about their health and demonstrating a commitment to improving healthcare delivery 
+											through cutting-edge technologies.</p>
 									</section>
-
 							</div>
 						</div>
 					</div>
