--- a/earlycare.html
+++ b/earlycare.html
@@ -26,9 +26,9 @@
 										</ul>
 									<li><a href="https://ncthetruth.github.io/researchdatamining">Research Data Mining</a></li>
 									<li><a href="#">Early Care</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Virtual Nursing Assistant)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (Tanaka Guitar)</a></li>
-									<li><a href="https://ncthetruth.github.io">Soon (GiveMeSomeCredit)</a></li>
+									<li><a href="https://ncthetruth.github.io/virtualnursingassistant">Virtual Nursing Assistant</a></li>
+									<li><a href="https://ncthetruth.github.io/tanakaguitar">Tanaka Guitar</a></li>
+									<li><a href="https://ncthetruth.github.io/givemesomecredit">GiveMeSomeCredit</a></li>
 								</ul>
 							</li>
 							<li><a href="https://ncthetruth.github.io/#one">About</a></li>
@@ -56,7 +56,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/earlycarebanner.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/earlycarebanner.png" alt="earlycarebanner" /></a>
 									<div class="pmid">
 										<h3>What is Early Care ?</h3>
 										<p>EarlyCare is a beauty company specializing in the production of facial soaps for children, teenagers, and adults. Our product, Early Care Gentle Kids and Teens Facial Foam, is specifically formulated for individuals with sensitive skin. It is free from PARABENS and SLS, contains no artificial fragrances, infused with natural oils, and maintains a balanced pH level. Additionally, it is registered with the Food and Drug Administration (BPOM).</p>
