--- a/binuschat.html
+++ b/binuschat.html
@@ -74,7 +74,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/githubrepo.png" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/githubrepo.webp" alt="" /></a>
 											<h3>Code Repository</h3>
 											<p class="pmid">This repository serves as a documentation and storage space 
 												for all Bina Nusantara Chat projects, accessible to anyone 
@@ -92,7 +92,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/Login1.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Login1.webp" alt="" /></a>
 									<div class="pmid">
 										<h3>Why was Binus Chat created?</h3>
 										<p>We developed the Binus Chat web app with the aim of simplifying 
