--- a/givemesomecredit.html
+++ b/givemesomecredit.html
@@ -55,7 +55,7 @@
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/givemesomecredit.png" alt="GiveMeSomeCredit" /></a>
+								<a href="#" class="image fit"><img src="images/givemesomecredit.webp" alt="GiveMeSomeCredit" /></a>
 							<div class="pmid">
 								<h3>What is GiveMeSomeCredit?</h3>
 								<p>GiveMeSomeCredit is a competition on Kaggle where participants aim to improve 
