--- a/researchdatamining.html
+++ b/researchdatamining.html
@@ -55,7 +55,7 @@
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/research.png" alt="researchdatamining" /></a>
+								<a href="#" class="image fit"><img src="images/research.webp" alt="researchdatamining" /></a>
 							<div class="pmid">
 								<h3>Why are we conducting this research?</h3>
 								<p>During pandemic, credit card usage has increased
