--- a/virtualnursingassistant.html
+++ b/virtualnursingassistant.html
@@ -75,7 +75,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/mockupvnahd.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/mockupvnahd.webp" alt="" /></a>
 									<div class="pmid">
 										<h3>What is Virtual Nusing Assistant?</h3>
 										<p>
