--- a/earlycare.html
+++ b/earlycare.html
@@ -56,7 +56,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/earlycarebanner.png" alt="earlycarebanner" /></a>
+										<a href="#" class="image fit"><img src="images/earlycarebanner.webp" alt="earlycarebanner" /></a>
 									<div class="pmid">
 										<h3>What is Early Care ?</h3>
 										<p>EarlyCare is a beauty company specializing in the production of facial soaps for children, teenagers, and adults. Our product, Early Care Gentle Kids and Teens Facial Foam, is specifically formulated for individuals with sensitive skin. It is free from PARABENS and SLS, contains no artificial fragrances, infused with natural oils, and maintains a balanced pH level. Additionally, it is registered with the Food and Drug Administration (BPOM).</p>
@@ -74,7 +74,7 @@
 									<section id="sidebar">
 										<section>
 											<h3>EarlyCare Website</h3>
-											<a href="#" class="image fit"><img src="images/earlycareshop.png" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/earlycareshop.webp" alt="" /></a>
 											<p class="pmid">If there are any changes on the website, it means that the website has been updated by EarlyCare.</p>
 											<footer>
 												<ul class="actions">
