--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 							<p>Bina Nusantara University student majoring in Computer Science<br />
 								 who has an interest in Data Science and Web Development</p>
 						</header>
-						<span class="image"><img src="images/miko.png" alt="" /></span>
+						<span class="image"><img src="images/miko.webp" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/bannerncthetruth.png" alt="" /></span>
+					<span class="image fit main"><img src="images/bannerncthetruth.webp" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -92,7 +92,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/Loginhome.png" alt="" /></span>
+					<span class="image fit main"><img src="images/Loginhome.webp" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2 class="bld">Project 1</h2>
@@ -110,7 +110,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/research.png" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/research.webp" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Project 2</h2>
@@ -129,7 +129,7 @@
 
 				<!-- Four -->
 				<section id="four" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/earlycarebanner.png" alt="" /></span>
+					<span class="image fit main"><img src="images/earlycarebanner.webp" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
