--- a/tanakaguitar.html
+++ b/tanakaguitar.html
@@ -56,7 +56,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/hometanakaguitar.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/hometanakaguitar.webp" alt="" /></a>
 									<div class="pmid">
 										<h3>What is Tanaka Guitar?</h3>
 										<p>The Tanaka Guitar project is a university assignment where we are 
